Resolve sonarcloud issues